# .axios-rat-helper

./: .gitignore  ATTACK_FLOW.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  REMEDIATION.md  Taskfile.yml
.claude/: settings.json
.github/workflows/: release.yml
src/: iocs.rs  main.rs  report.rs
src/scanner/: filesystem.rs  mod.rs  network.rs  npm.rs  process.rs  registry.rs
test/: Dockerfile  demo.tape  verify.sh
