[package]
name = "axios-rat-scan"
version = "0.1.0"
edition = "2021"
description = "Cross-platform scanner for the axios supply chain RAT (2026-03-31)"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
colored = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
opt-level = 3
lto = true
strip = true
